<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/radioGroup"
            style="@style/DefaultRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.udacity.loadapp.fetcher.reposelector.RepoSelectorRadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/radio_button_default_height"
                app:name="@string/download_glide_label"
                app:url="@string/download_glide_url" />

            <com.udacity.loadapp.fetcher.reposelector.RepoSelectorRadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/radio_button_default_height"
                app:name="@string/download_udacity_load_app_label"
                app:url="@string/download_udacity_load_app_url" />

            <com.udacity.loadapp.fetcher.reposelector.RepoSelectorRadioButton
                android:id="@+id/radio3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/radio_button_default_height"
                app:name="@string/download_retrofit_label"
                app:url="@string/download_retrofit_url" />

            <com.udacity.loadapp.fetcher.reposelector.RepoSelectorRadioButton
                android:id="@+id/radio4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/download_custom_url_label"
                app:isCustomFormat="true" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>